test/runnable/extra-files/test11239a.d
import test11239b;

void main()
{
    foo(1);
}
