test/fail_compilation/ice12362.d

enum foo;
void main()
{
    enum bar = foo;
}
